Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139983

macOS (Tahoe): assert in tst_QStyleSheetStyle::complexWidgetFocus()

XMLWordPrintable

    • macOS
    • c51b2b1bf (dev), bc9732701 (6.10), b82d20301 (6.9), 8a23bc365 (tqtc/lts-6.8), 8c5f92585 (tqtc/lts-6.5)

      With the recent changes in QMacStyle a manual slider rendering was introduced for QSlider to address issues on macOS 26. This triggered an assert on the graphics context being nullptr in the style sheet auto-test, the one that creates a QImage-based QPainter with image format QImage::Format_ARGB32. Creating a bitmap CGContextRef (CGBitmapCreateContext) with such format fails on macOS (and asserts in 'drawSliderKnob' function on Tahoe, potentially generating warnings on CoreGraphics side when using NSControls). Protection against such context is needed in QMacStyle.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes