QMacStyle: protect against a nullptr context

Found in the stylesheet auto-test that started crashing after a recent
change (introducing a manual slider painting). The test is using QImage
with format QImage::Format_ARGB32 to render to and CGBitmapCreateContext
fails for such format. Previously was not a problem, since we did not
use the context directly.

Protect against nullptr in the NSView drawing function and in functions
like drawControl etc. (but do not skip the parts using QPainter without
triggering NSControl/CGContextRef-related code-paths).

Fixes: QTBUG-139983
Pick-to: 6.8 6.5
Change-Id: Iee1aa23549b29b489b870be3c7660700eba2cbc2
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit c51b2b1bfaee1ed674e6d860196f6d6db4d50ec8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit bc9732701b4f47964be6720eef5988df95510593)